Switched to using compact_str and dashmap for data structures

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,5 @@ clap = { version = "4.2.1", features = ["derive"] }
 anyhow = "1"
 scraper = "0.19"
 lazy_static = "1.5"
+compact_str = { version = "0.8", features = ["serde", "markup"] }
+dashmap = { version = "6.0", features = ["serde", "inline"] }
