--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,13 +22,14 @@ reqwest = { version = "0.12", features = [
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 url = "2.5"
+uuid = { version = "1.10", features = ["v4"] }
 chrono = { version = "0.4", features = ["serde"] }
 tokio = { version = "1", features = ["full"] }
-tokio-cron-scheduler = { version = "*", features = ["log", "signal"] }
+tokio-cron-scheduler = { version = "0.10", features = ["log", "signal"] }
 clap = { version = "4.2.1", features = ["derive"] }
 clap-verbosity-flag = "2.2"
 anyhow = "1"
-scraper = "0.19"
+scraper = "0.20"
 lazy_static = "1.5"
 compact_str = { version = "0.8", features = ["serde", "markup"] }
 nom = { version = "7.1" }
