--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,8 +26,8 @@ url = "2.5"
 uuid = { version = "1.10", features = ["v4"] }
 chrono = { version = "0.4", features = ["serde"] }
 tokio = { version = "1", features = ["full"] }
-tokio-cron-scheduler = { version = "0.10", features = ["log", "signal"] }
-clap = { version = "4.2.1", features = ["derive"] }
+tokio-cron-scheduler = { version = "0.11", features = ["log", "signal"] }
+clap = { version = "4.2.1", features = ["derive", "env"] }
 clap-verbosity-flag = "2.2"
 anyhow = "1"
 scraper = "0.20"
