--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ axum = { version = "0.7" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 url = "2.5"
+urlencoding = { version = "2.1" }
 uuid = { version = "1.10", features = ["v4"] }
 chrono = { version = "0.4", features = ["serde"] }
 tokio = { version = "1", features = ["full"] }
@@ -46,6 +47,8 @@ tracing-subscriber = { version = "0.3", default-features = false, features = [
   "fmt",
   "ansi",
 ] }
+slugify = { version = "0.1" }
+rand = { version = "0.8" }
 # dashmap = { version = "6.0", features = ["serde", "inline"] }
 
 # Compile with: RUSTFLAGS="-C target-cpu=native" cargo build --release
