Starting on defining DB schemas

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,8 @@ tracing-subscriber = { version = "0.3", default-features = false, features = [
 ] }
 slugify = { version = "0.1" }
 rand = { version = "0.8" }
+sqlx = { version = "0.8", features = ["runtime-tokio"] }
+dotenvy = { version = "0.15" }
 # dashmap = { version = "6.0", features = ["serde", "inline"] }
 
 # Compile with: RUSTFLAGS="-C target-cpu=native" cargo build --release
