Think I have a usable DB schema now

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://oddmin:test@localhost/rlunch
+DATABASE_URL=postgresql://postgres:test@localhost/rlunch
 RUST_LOG=none,rlunch=trace
