--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ tokio = { version = "1", features = ["full"] }
 tokio-cron-scheduler = { version = "0.11", features = ["log", "signal"] }
 clap = { version = "4.2.1", features = ["derive", "env"] }
 clap-verbosity-flag = "2.2"
-anyhow = "1"
+anyhow = "1.0"
 scraper = "0.20"
 lazy_static = "1.5"
 compact_str = { version = "0.8", features = ["serde", "markup"] }
@@ -56,6 +56,9 @@ sqlx = { version = "0.8", features = [
   "uuid",
 ] }
 dotenvy = { version = "0.15" }
+humantime = { version = "2.1" }
+
+# scopeguard = { version = "1.2" }
 # dashmap = { version = "6.0", features = ["serde", "inline"] }
 
 # Compile with: RUSTFLAGS="-C target-cpu=native" cargo build --release
