--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,12 @@ reqwest = { version = "0.12", features = [
   "stream",
 ] }
 axum = { version = "0.7" }
+tower-http = { version = "0.6", features = [
+  "catch-panic",
+  "compression-full",
+  "timeout",
+  "trace",
+] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 url = "2.5"
@@ -27,10 +33,11 @@ urlencoding = { version = "2.1" }
 uuid = { version = "1.10", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 tokio = { version = "1", features = ["full"] }
-tokio-cron-scheduler = { version = "0.11", features = ["log", "signal"] }
+tokio-cron-scheduler = { version = "0.13", features = ["log", "signal"] }
 clap = { version = "4.2.1", features = ["derive", "env"] }
 clap-verbosity-flag = "2.2"
 anyhow = "1.0"
+thiserror = { version = "1.0" }
 scraper = "0.20"
 lazy_static = "1.5"
 compact_str = { version = "0.8", features = ["serde", "markup"] }
