--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,12 +20,7 @@ reqwest = { version = "0.12", features = [
   "stream",
 ] }
 axum = { version = "0.7" }
-tower-http = { version = "0.6", features = [
-  "catch-panic",
-  "compression-full",
-  "timeout",
-  "trace",
-] }
+tower-http = { version = "0.6", features = ["catch-panic", "timeout", "trace"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 url = "2.5"
