--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ axum = { version = "0.7" }
 tower-http = { version = "0.6", features = ["catch-panic", "timeout", "trace"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_with = { version = "3.11" }
 url = "2.5"
 urlencoding = { version = "2.1" }
 uuid = { version = "1.10", features = ["v4", "serde"] }
