--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,12 @@ reqwest = { version = "0.12", features = [
   "stream",
 ] }
 axum = { version = "0.7" }
-tower-http = { version = "0.6", features = ["catch-panic", "timeout", "trace"] }
+tower-http = { version = "0.6", features = [
+  "catch-panic",
+  "timeout",
+  "trace",
+  "fs",
+] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_with = { version = "3.11" }
