Implemented usable HTML output

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,14 @@ version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 authors = ["Odd E. Ebbesen <oddebb@gmail.com>"]
-description = "A lunch menu scraper and server"
+description = "A restaurant menu scraper and server"
 readme = "README.md"
 publish = false
 homepage = "https://github.com/oddlid/rlunch"
 repository = "https://github.com/oddlid/rlunch"
+
+[features]
+bundled = []
 
 [dependencies]
 reqwest = { version = "0.12", features = [
@@ -26,6 +29,9 @@ tower-http = { version = "0.6", features = [
   "trace",
   "fs",
 ] }
+minijinja = { version = "2.3", features = ["loader"] }
+minijinja-embed = { version = "2.3" }
+minijinja-autoreload = { version = "2.3" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_with = { version = "3.11" }
@@ -68,6 +74,9 @@ humantime = { version = "2.1" }
 
 # scopeguard = { version = "1.2" }
 # dashmap = { version = "6.0", features = ["serde", "inline"] }
+
+[build-dependencies]
+minijinja-embed = { version = "2.3" }
 
 # Compile with: RUSTFLAGS="-C target-cpu=native" cargo build --release
 # [profile.release]
