Swapped text address for map icon, adjusted look

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ tower-http = { version = "0.6", features = [
 minijinja = { version = "2.3", features = ["loader"] }
 minijinja-embed = { version = "2.3" }
 minijinja-autoreload = { version = "2.3" }
+minijinja-contrib = { version = "2.3", features = ["datetime", "timezone"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_with = { version = "3.11" }
