--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ reqwest = { version = "0.12", features = [
   "stream",
 ] }
 axum = { version = "0.7" }
+axum-embed = { version = "0.1" }
+rust-embed = { version = "8.5" }
 tower-http = { version = "0.6", features = [
   "catch-panic",
   "timeout",
