--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,13 +14,14 @@ repository = "https://github.com/oddlid/rlunch"
 bundled = []
 
 [dependencies]
-reqwest = { version = "0.12", features = [
+reqwest = { version = "0.12", default-features = false, features = [
   "json",
   "gzip",
   "brotli",
   "zstd",
   "deflate",
   "stream",
+  "rustls-tls",
 ] }
 axum = { version = "0.7" }
 axum-embed = { version = "0.1" }
@@ -67,7 +68,7 @@ tracing-subscriber = { version = "0.3", default-features = false, features = [
 slugify = { version = "0.1" }
 rand = { version = "0.8" }
 sqlx = { version = "0.8", features = [
-  "runtime-tokio",
+  "runtime-tokio-rustls",
   "postgres",
   "chrono",
   "uuid",
