--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,13 @@ reqwest = { version = "0.12", default-features = false, features = [
   "stream",
   "zstd",
 ] }
+reqwest-middleware = { version = "0.4", features = ["json", "rustls-tls"] }
+moka = { version = "0.12", features = ["future"] }
+http-cache-reqwest = { version = "0.15", default-features = false, features = [
+  "manager-moka",
+] }
+hashbrown = { version = "0.15", features = ["serde"] }
+bincode = { version = "1.3" }
 axum = { version = "0.7" }
 axum-embed = { version = "0.1" }
 rust-embed = { version = "8.5" }
