Add compression to HTTP responses

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,10 +29,15 @@ http-cache-reqwest = { version = "0.15", default-features = false, features = [
   "manager-moka",
 ] }
 bincode = { version = "1.3" }
-axum = { version = "0.7" }
+axum = { version = "0.8" }
 axum-embed = { version = "0.1" }
 rust-embed = { version = "8.5" }
-tower-http = { version = "0.6", features = ["catch-panic", "timeout", "trace"] }
+tower-http = { version = "0.6", features = [
+  "catch-panic",
+  "compression-full",
+  "timeout",
+  "trace",
+] }
 minijinja = { version = "2.3", features = ["loader"] }
 minijinja-embed = { version = "2.3" }
 minijinja-autoreload = { version = "2.3" }
