--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,17 @@
 volumes:
-  pg_data:
+  rlunch_pg_data:
+    external: true
 
 services:
   db:
     image: postgres:alpine
     container_name: pg
-    restart: always
+    hostname: pg
+    restart: unless-stopped
     shm_size: 128mb
     volumes:
       - type: volume
-        source: pg_data
+        source: rlunch_pg_data
         target: /var/lib/postgresql/data
     ports:
       - "5432:5432/tcp"
@@ -19,6 +21,18 @@ services:
       POSTGRES_PASSWORD: test
       PGDATA: /var/lib/postgresql/data/pgdata
 
+  rlunch_html:
+    image: oddlid/rlunch:latest
+    build: .
+    container_name: rlunch_html
+    command: rlunch serve -l 0.0.0.0:8081 html
+    ports:
+      - "8081:8081/tcp"
+    environment:
+      TZ: Europe/Stockholm
+      DATABASE_URL: postgresql://postgres:test@pg/rlunch
+
+  # For fake scraping
   caddy:
     image: oddlid/caddy:latest
     container_name: caddy
@@ -31,13 +45,3 @@ services:
       - "8080:8080/tcp"
     environment:
       TZ: Europe/Stockholm
-
-  rlunch_html:
-    image: oddlid/rlunch:latest
-    container_name: rlunch_html
-    command: rlunch serve -l 0.0.0.0:8081 html --gtag UA-126840341-2
-    ports:
-      - "8081:8081/tcp"
-    environment:
-      TZ: Europe/Stockholm
-      DATABASE_URL: postgresql://postgres:test@pg/rlunch
