--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ moka = { version = "0.12", features = ["future"] }
 http-cache-reqwest = { version = "0.15", default-features = false, features = [
   "manager-moka",
 ] }
-bincode = { version = "1.3" }
+bincode = { version = "2.0", features = ["serde"] }
 axum = { version = "0.8" }
 axum-embed = { version = "0.1" }
 rust-embed = { version = "8.5" }
