--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rlunch"
-version = "0.2.2"
+version = "0.2.3"
 edition = "2024"
 license = "MIT OR Apache-2.0"
 authors = ["Odd E. Ebbesen <oddebb@gmail.com>"]
@@ -12,6 +12,7 @@ repository = "https://github.com/oddlid/rlunch"
 
 [features]
 bundled = []
+debug-scrapers = []
 
 [dependencies]
 reqwest = { version = "0.12", default-features = false, features = [
@@ -92,6 +93,7 @@ rust_decimal = { version = "1.36", default-features = false, features = [
   "std",
 ] }
 shadow-rs = { version = "1.0" }
+# phf = { version = "0.12", features = ["macros"] }
 
 # hashbrown = { version = "0.15", features = ["serde"] }
 # scopeguard = { version = "1.2" }
